fixed time on small displays

--- a/web/assets/styles/main.css
+++ b/web/assets/styles/main.css
@@ -42,38 +42,48 @@ header
   float: right;
 }
 
+
+
 @media (max-width: 1100px) {
 #theme{width: 40%;}
+#time{display: none;}
 }
 
 @media (max-width: 800px) {
 #theme{width: 37%;}
+#time{display: none;}
 }
 
 @media (max-width: 750px) {
 #theme{width: 0%;}
+#time{display: none;}
 }
 
 
 @media (max-width: 600px) {
 #theme{width: 0%;}
+#time{display: none;}
 }
 
 @media (max-width: 500px) {
 #theme{width: 0%;}
+#time{display: none;}
 }
 
 @media (max-width: 400px) {
 #theme{width: 0%;}
+#time{display: none;}
 }
 
 
 @media (max-width: 300px) {
 #theme{width: 0%;}
+#time{display: none;}
 }
 
 @media (max-width: 200px) {
 #theme{width: 0%;}
+#time{display: none;}
 }
 
 
