--- a/web/assets/styles/portfolio.css
+++ b/web/assets/styles/portfolio.css
@@ -42,36 +42,51 @@ header
 
 @media (max-width: 1100px) {
 #theme{width: 40%;}
+#time{display: none;}
+.proj_img{width: 90%;}
 }
 
 @media (max-width: 800px) {
 #theme{width: 37%;}
+#time{display: none;}
+.proj_img{width: 90%;}
 }
 
 @media (max-width: 750px) {
 #theme{width: 0%;}
+#time{display: none;}
 .proj_img{width: 90%;}
 }
 
 @media (max-width: 600px) {
 #theme{width: 0%;}
+#time{display: none;}
+.proj_img{width: 90%;}
 }
 
 @media (max-width: 500px) {
 #theme{width: 0%;}
+#time{display: none;}
+.proj_img{width: 90%;}
 }
 
 @media (max-width: 400px) {
 #theme{width: 0%;}
+#time{display: none;}
+.proj_img{width: 90%;}
 }
 
 
 @media (max-width: 300px) {
 #theme{width: 0%;}
+#time{display: none;}
+.proj_img{width: 90%;}
 }
 
 @media (max-width: 200px) {
 #theme{width: 0%;}
+#time{display: none;}
+.proj_img{width: 90%;}
 }
 
 .div1{margin-left: 5%;}
